# contracts

./: .env  .env.preview  .gitignore  AUDIT_NOTES.md  FLOW.md  README.md  cabal-project.backup  cabal.project  complete_build.sh  deleg.pkh  final.check  hash.hashes  hie.yaml  multisig1.pkh  multisig2.pkh  multisig3.pkh  policy.hashes  start.pid  start.tkn  start_info.json  update_contracts.py
.devcontainer/: devcontainer.json
cogno-contract/: cogno-contract.plutus
did-scripts/: balances.sh  createDataUTxO.sh  createDidUTxO.sh  createReferenceScript.sh  decreaseFT.sh  increaseFT.sh  removeDidUTxO.sh  removeReferenceScript.sh  tradeToken.sh
docs/: qsp-4.md
fractional-sale-contract/: build-project.sh  fractional-sale-contract.cabal  fractional-sale-contract.plutus  validator.addr  validator.bytes  validator.hash
fractional-sale-scripts/: 00_createReferenceScript.sh  01_createSale.sh  02_removeSale.sh  03_updateSale.sh  04_purchaseBundle.sh  balances.sh  tradeToken.sh
fractionalize-scripts/: 03_lockAndFractionalize.sh  04_unlockAndSolidify.sh  balances.sh  createFractionalUTxO.sh  createReferenceScript.sh  lockAndFractionalize.sh  lockAndFractionalizeWithReferences.sh  minting-contract.plutus  policy.id  removeFractionalUTxO.sh  removeReferenceScript.sh  tradeToken.sh  unlockAndSolidify.sh  unlockAndSolidifyWithReferences.sh  wallets
locking-contract/: build-project.sh  full-build-project.sh  locking-contract.cabal  locking-contract.plutus  locking_contract.plutus  locking_info.json  token-sale.cabal  v2-fractional-locking-contract.plutus  v2-locking-contract.cabal  validator.bytes  validator.hash
locking-contract/app/: locking-contract.hs  royalty-payout.hs  v2-locking-contract.hs
locking-contract/pab/: Main.hs
locking-contract/src/: CheckFuncs.hs  LockTokenizedNFTContract.hs  LockingContract.hs  NFTLockingContract-new.hs  RoyaltyPayout.hs  V2CheckFuncs.hs  V2LockingContract.hs
locking-scripts/: balances.sh  completeTokenSale.sh  createArtistUTxO.sh  exitArtistUTxO.sh  justSubmit.sh  lockAndFractionalize.sh  path_to_socket.sh  tradeToken.sh  unlockAndsolidify.sh  updateToNewPriceTokenSale.sh  updateToOldPriceTokenSale.sh
marketplace-contract/: build-project.sh  full-build-project.sh  marketplace-contract.cabal  marketplace-contract.plutus  validator.addr  validator.bytes  validator.hash
marketplace-scripts/: 00_createReferenceScript.sh  01_createOracleFeed.sh  02_createBucketSale.sh  03_purchaseTokens.sh  04_extractPayout.sh  98_removeBucketSale.sh  market.json
minting-contract/: build-project.sh  full-build-project.sh  minting-contract.cabal  minting-contract.plutus  minting_contract.plutus  minting_info.json  policy.bytes  policy.id  v2-minting-contract.cabal
minting-contract/app/: minting-contract.hs
minting-contract/src/: MintFractionalizedTokenContract.hs  MintingContract.hs  V2MintingContract.hs
minting-scripts/: balances.sh  burnTokens.sh  createTokenSale.sh  mintTokens.sh  removeTokenSale.sh  tradeToken.sh
nft-locking-contract/: build-project.sh  full-build-project.sh  nft-locking-contract.cabal  nft-locking-contract.plutus  nft_locking_contract.plutus  nft_locking_info.json  quick-build.sh  test_info.json  v2-tokenized-locking-contract.plutus  validator.bytes  validator.hash
nft-locking-contract/app/: nft-locking-contract.hs  v2-nft-locking-contract.hs
nft-locking-contract/src/: CheckFuncs.hs  LockStarterNFTContract.hs  NFTLockingContract.hs  TokenHelper.hs  V2NFTLockingContract.hs
nft-locking-contract/test/: Spec.hs
nft-locking-contract/test/Spec/: LockStarterNFTContract.hs
nft-minting-contract/: build-project.sh  full-build-project.sh  nft-minting-contract.cabal  nft-minting-contract.plutus  nft_minting_contract.plutus  nft_minting_info.json  policy.bytes  policy.id  v2-tokenized-minting-contract.plutus
nft-minting-scripts/: balances.sh  createArtistUTxO.sh  exitArtistUTxO.sh  mintNFT.sh  path_to_socket.sh
nix/: sources.json
order-book-batcher/: README.md
order-book-contract/: README.md  build-project.sh  complete_build.sh  deleg.cert  full-build-project.sh  order-book-contract.cabal  order-book-contract.plutus  stake-contract.plutus  stake.addr  stake.bytes  stake.cert  stake.hash  start_info.json  update_contracts.py  validator.addr  validator.bytes  validator.hash
order-book-contract/app/: order-book-contract.hs  staking-contract.hs
order-book-contract/info/: pool.id  reward.pkh
order-book-contract/src/: DataTypes.hs  HelperFunctions.hs  OrderBookContract.hs  OrderBookDatum.hs  OrderBookRedeemer.hs  ReducedFunctions.hs  StakeContract.hs
order-book-scripts/: 00_createReferenceScript.sh  01_createSellerUTxO.sh  02_removeSellerUTxO.sh  03_updateSellerUTxO.sh  04_createBuyerUTxO.sh  05_removeBuyerUTxO.sh  06_updateBuyerUTxO.sh  07_fullSwapUTxOs.sh  08_partialSwapUTxOs.sh  21_removeSellerUTxOAttack.sh  balances.sh  getScriptUTxOs.sh  get_pkh.sh  tradeToken.sh
order-book-test-scripts/: 00_createReferenceScript.sh  04_createBuyerUTxO.sh  05_removeBuyerUTxO.sh  08_partialSwapUTxOs.sh  20_fullSwapUTxOAttack.sh  balances.sh  tradeToken.sh
plutus-contracts/: .env.preprod  .env.preview  complete_build.sh  deleg.pkh  final.check  hash.hashes  hie.yaml  multisig1.pkh  multisig2.pkh  multisig3.pkh  start.tkn  start_info.json  update_contracts.py
prove-human-contract/: build-project.sh  prove-human-contract.cabal  prove-human-contract.plutus  validator.addr  validator.bytes  validator.hash
prove-human-contract/app/: prove-human-contract.hs
prove-human-contract/src/: GraphFunctions.hs  ProveHumanContract.hs  ProveHumanDatum.hs  ProveHumanRedeemer.hs
prove-human-scripts/: 00_createReferenceScript.sh  01_create.sh  02_remove.sh  03_prove.sh  README.md  balances.sh
test-suite/: .node.env  README.md  balances.sh  create_testnet_wallets.sh  daemon.toml  main.py  prep_testnet_for_testing.sh  prep_testnet_wallets.sh  start_testnet_node.sh
tokenize-scripts/: 00_createReferenceScript.sh  01_mintStarterNft.sh  02_mintNFT.sh  05_burnNFT.sh  06_removeCatalogUTxO.sh  07_burnStarterNft.sh  balances.sh  burnNFT.sh  final.check  (+14 more)
(+741 files in other folders)
