cabal-version: 2.4

name:                   minting-contract
version:                0
description:            A plutus script for minting FTs.
author:                 Quinn Parkinson
maintainer:             qparkinson@projectnewm.io
license:                AGPL-3.0-only
build-type:             Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wpartial-fields
                        -Wmissing-deriving-strategies
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      MintingContract

  build-depends:        bytestring
                      , cardano-api
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , plutus-script-utils
                      , serialise

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable minting-contract
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              minting-contract.hs
  
  ghc-options:          -threaded 
                        -rtsopts 
                        "-with-rtsopts=-T"
                        -O2

  build-depends:        cardano-api
                      , minting-contract

