cabal-version: 2.4

name:                   nft-locking-contract
version:                1
description:            A plutus script for locking funds.
author:                 Quinn Parkinson
maintainer:             qparkinson@projectnewm.io
license:                AGPL-3.0-only
build-type:             Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wpartial-fields
                        -Wmissing-deriving-strategies
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      LockStarterNFTContract

  build-depends:        bytestring
                      , cardano-api
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , plutus-script-utils
                      , serialise
                      , useful-funcs
                      , plutonomy
                      , plutus-ledger
                      , plutus-contract
                      , plutus-tx-constraints
                      , plutus-ledger-constraints
                      , aeson
                      , cardano-node-emulator

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable nft-locking-contract
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              nft-locking-contract.hs
  
  ghc-options:          -threaded 
                        -rtsopts 
                        "-with-rtsopts=-T"
                        -O2

  build-depends:        cardano-api
                      , nft-locking-contract
                      , bytestring
                      , aeson
                      , plutus-ledger-api
                      , useful-funcs
                      , directory

test-suite nft-locking-test
  import:               base, project-config
                      , maybe-Win32
  
  type:                 exitcode-stdio-1.0
  
  main-is:              Spec.hs
  
  other-modules:        Spec.LockStarterNFTContract


  build-depends:
    , useful-funcs
    , plutus-tx
    , plutus-ledger
    , plutus-ledger-api
    , plutus-contract
    , plutus-script-utils
    , nft-locking-contract
    , nft-minting-contract
    , tasty             ^>=1.4.1
    , tasty-quickcheck  ^>=0.10.1.2
    , QuickCheck        ^>=2.14.2
    , template-haskell  ^>=2.16.0.0

  hs-source-dirs: test