cabal-version: 2.4

name:                   order-book-contract
version:                0
description:            A plutus script for retreiving funds.
author:                 The Ancient Kraken
maintainer:             logical.mechanism@protonmail.com
license:                AGPL-3.0-only
build-type:             Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wpartial-fields
                        -Wmissing-deriving-strategies
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      OrderBookContract
                        DataTypes

  build-depends:        bytestring
                      , cardano-api
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , plutus-script-utils
                      , serialise
                      , useful-funcs

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable order-book-contract
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              order-book-contract.hs
  
  ghc-options:          -threaded 
                        -rtsopts 
                        "-with-rtsopts=-T"
                        -O2

  build-depends:        cardano-api
                      , order-book-contract

