cabal-version: 2.4

name:                   prove-human-contract
version:                0
description:            A plutus script for retreiving funds.
author:                 The Ancient Kraken
maintainer:             logical.mechanism@protonmail.com
license:                AGPL-3.0-only
build-type:             Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Wno-partial-type-signatures -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-prepositive-qualified-module
    -Wno-missing-import-lists -Wno-monomorphism-restriction
    -Wno-all-missed-specializations -Wno-unrecognised-warning-flags
    -Wno-unrecognised-pragmas -fprint-equality-relations
    -fprint-explicit-kinds -fprint-explicit-foralls
  
  
  
common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      ProveHumanContract
                        ProveHumanDatum
                        ProveHumanRedeemer
                        GraphFunctions

  build-depends:        bytestring
                      , cardano-api
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , plutus-script-utils
                      , serialise
                      , useful-funcs

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable prove-human-contract
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              prove-human-contract.hs
  
  ghc-options:          -threaded 
                        -rtsopts 
                        "-with-rtsopts=-T"
                        -O2

  build-depends:        cardano-api
                      , prove-human-contract

